# kube-stats-exporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  deployment.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
chart/templates/tests/: test-connection.yaml
src/: main.rs
