[package]
name = "kube-stats-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Jimena Cabrera Notari <phenomenes@gmail.com>"]
description = "Prometheus exporter that exposes pod's ephemeral storage metrics"
license = "MIT"

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
env_logger = { version = "0.11.2" }
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"]}
hyper-util = { version = "0.1.3", features = ["full"]}
k8s-openapi = { version = "0.21.1", default-features = false, features = ["v1_29"] }
kube = { version = "0.88.1", features = ["runtime","derive"] }
lazy_static = "1.4.0"
log = "0.4.21"
openssl = "0.10"
openssl-sys = "0.9"
prometheus = { version = "0.13.3" }
prometheus-client = "0.22.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197" }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
